i chenged some valus

--- a/frontend-angular/src/app/pricing/pricing.component.html
+++ b/frontend-angular/src/app/pricing/pricing.component.html
@@ -4,5 +4,7 @@
   Amount: ${{pricing.amount}} <br />
   {{pricing.description}}
   <h1>bharathi</h1>
+  <h2>sraabjh</h2>
+  <h3>hgdhieuie</h3>
 </div>
 
